# website

./: .gitignore  Dockerfile  README.md  docker-compose.yml  file_index.json  getPrompt.js  middleware.ts  next.config.ts  nginx.conf  nginx.conf.prod  nginx.prod.conf  package-lock.json  package.json  prometheus.yml  tsconfig.json
app/: globals.css  i18n.middleware.ts  i18n.ts  layout.tsx  page.module.css  page.tsx  (+1 more)
backend/: .gitignore  Cargo.toml  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: app.module.ts  app_state.rs  config.rs  errors.rs  lib.rs  main.rs  main.ts
backend/src/common/: errors.rs
backend/src/endpoints/: app_state.rs  config.rs  mod.rs
backend/src/endpoints/api/: mod.rs  routes.rs
backend/src/endpoints/api/spotify/: handlers.rs  mod.rs  models.rs  routes.rs  services.rs
backend/src/endpoints/api/telegram/: handlers.rs  mod.rs  models.rs  services.rs
backend/src/endpoints/metrics/: handlers.rs  routes.rs
backend/src/endpoints/spotify/: handlers.rs  models.rs  routes.rs  services.rs
backend/src/endpoints/telegram/: handlers.rs  models.rs  services.rs
backend/src/metrics/: metrics.controller.ts  metrics.service.ts
backend/src/spotify/: handlers.rs  mod.rs  models.rs  routes.rs  services.rs  spotify.controller.ts  spotify.module.ts  spotify.service.ts
backend/src/spotify/dto/: spotify.dto.ts
backend/src/telegram/: handlers.rs  models.rs  routes.rs  services.rs  telegram.controller.ts  telegram.module.ts  telegram.service.ts
backend/src/telegram/dto/: post.dto.ts
backend/tests/: api_tests.rs
(+147 files in other folders)
