[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
dotenvy = "0.15"
rss = "2.0.12"
regex = "1.11.1"
scraper = "0.23.1"
async-trait = "0.1.88"
bytes = "1.10.1"
actix-web-prom = "0.7"
prometheus = { version = "0.13", features = ["process"] }
base64 = "0.22"
futures-util = "0.3"
async-stream = "0.3.6"
tokio-stream = "0.1.17"

[[test]]
name = "api_tests"
path = "tests/api_tests.rs"
